# these_work

./: 1block.dxf  2D_with_cad.ipynb  2D_without_cad.ipynb  Drawing1 (14).dxf  Drawing1 (16).dxf  Drawing1 (20).dxf  Drawing1 (21).dxf  Drawing1 (23).dxf  GFG.msh  Gilbert.dxf  Gilbertex2cad.dxf  Gilbertex3cad.dxf  Gilbertex4cad.dxf  Gilbertex5cad.dxf  README.md  arch1.dxf  arch_drawing (1).dxf  arch_drawing.dwg  arch_drawing.dxf  arch_drawing_test (17).dxf  arch_drawing_test (18).dxf  arch_drawing_test (19).dxf  arch_drawing_test (20).dxf  arch_drawing_test.dxf  arch_drawing_test_red (1).dxf  arch_drawing_test_red (3).dxf  arch_drawing_test_red (4).dxf  arch_drawing_test_red (5).dxf  arch_drawing_test_red.dxf  cube_mesh_1.dxf  ex11blocks.dxf  ex1blocks0nodes.dxf  ex1blocks11nodes.dxf  ex1blocks1nodes.dxf  ex1blocks2edges.dxf  ex2blocks.dxf  ex5blocks.dxf  input_mesh.geo  input_mesh.vtk  mechanic_data.txt  (+21 more)
.ipynb_checkpoints/: 2D_with_cad-checkpoint.ipynb  2D_without_cad-checkpoint.ipynb  Untitled-checkpoint.ipynb
146blocks/: Thumbs.db
2D_implementation/: Recovered model - RhinoAutosave.3dm  Recovered model - RhinoAutosave.3dm.rhl  Recovered model - RhinoAutosave.3dmbak  Untitled.ipynb  Untitled.py  batch.bat  data.json  external_script.py  launch_external_code.py  matrices.txt  nurbs_curve.msh  pont.py  stat_disp.vtu  test.py
55blocks/: Thumbs.db
files_with_ampl/: autocad_data_extraction.py  data_entry.py  graphical_rep.py  ipopt_data.py  iterative_approach_cvxopt.py  iterative_ipopt.py  kin_ipopt.py  kinematic_approach_cvxopt.py  loading_extraction.py  main.py  mix_data.py  problem_building_up.py  stat_ipopt.py  static_approach_cvxopt.py  static_approach_ipopt.py  test.py
mesh/: 3d_model.py  3d_model_PyC.py  CMakeLists.txt  mesh.pxd  mesh.pyd  mesh.pyx  meshKernel.cxx  meshKernel.hxx  mesh_Py.cpp  mesh_d.pyd  test.py
rhino_test/: 3d_model.py  disp.vtu  figure.html  figure_disp.html  figure_mesh.html  mesh.cpp  scatter_plot.html  square_face.msh  stat_body.vtu  stat_body.vtu.vtu  stat_stress.vtu  stat_stress.vtu.vtu  test 001.3dm  test 001.3dmbak  test 001.stp  test 001.stpbak  test.3dm  test.3dmbak  test.csv  test.py  test.stl  test.stlbak  (+6 more)
(+7 files in other folders)
